; ModuleID = '/home/carl/AnghaBench/mpv/video/filter/extr_refqueue.c_mp_refqueue_add_in_format.c'
source_filename = "/home/carl/AnghaBench/mpv/video/filter/extr_refqueue.c_mp_refqueue_add_in_format.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_refqueue = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mp_refqueue_add_in_format(%struct.mp_refqueue* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.mp_refqueue*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.mp_refqueue* %0, %struct.mp_refqueue** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.mp_refqueue*, %struct.mp_refqueue** %4, align 8
  %8 = getelementptr inbounds %struct.mp_refqueue, %struct.mp_refqueue* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @mp_autoconvert_add_imgfmt(i32 %9, i32 %10, i32 %11)
  ret void
}

declare dso_local i32 @mp_autoconvert_add_imgfmt(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
